@@ -7,3 +7,4 @@ importFrom(grDevices, dev.flush, dev.hold)
 importFrom(graphics, lines, par, polygon)
 importFrom(stats, approxfun, filter, is.mts, plot.ts, quantile, rbinom,
            time, ts, tsp, "tsp<-")
+export(cbind.ts)
